# snowcone

./: .clang-format  .lift.toml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.c  app.h  buffer.c  buffer.h  demo.pem  irc.c  ircmsg.c  load_average.lua  logic.lua  lua-ncurses.c  lua-ncurses.h  main.c  meson.build  mrs.c  mrs.h  ordered_map.lua  quickstart.sh  snowcone.1  snowcone.txt  tcp-server.c  write.h
.devcontainer/: Dockerfile
.github/workflows/: cmake.yml
app/: CMakeLists.txt  app.c  app.cpp  app.h  applib.cpp  base64.c  base64.h  bracketed_paste.cpp  buffer.c  buffer.h  config.h.in  config.hpp.in  configuration.c  configuration.cpp  configuration.h  irc.c  irc.cpp  irc.h  ircmsg.c  ircmsg.h  lua-ncurses.c  lua_uv_dnslookup.cpp  lua_uv_filewatcher.c  lua_uv_filewatcher.cpp  lua_uv_filewatcher.h  lua_uv_timer.c  lua_uv_timer.cpp  lua_uv_timer.h  main.c  main.cpp  mrs.c  mygeoip.c  mygeoip.h  read-line.c  read-line.cpp  read-line.h  safecall.c  safecall.cpp  safecall.h  socat.c  (+11 more)
app/include/: app.h  app.hpp  applib.hpp  awaituv.hpp  base64.h  bracketed_paste.hpp  configuration.h  configuration.hpp  irc.h  irc.hpp  lua_uv_dnslookup.hpp  lua_uv_filewatcher.h  lua_uv_filewatcher.hpp  lua_uv_timer.h  lua_uv_timer.hpp  read-line.h  read-line.hpp  safecall.h  safecall.hpp  socat.h  socat.hpp  tcp-server.hpp  userdata.hpp  uv.hpp  uvaddrinfo.hpp  uverror.hpp  write.hpp
base64/: CMakeLists.txt  base64.cpp
base64/include/: base64.hpp
client/: CMakeLists.txt  LuaRef.hpp  README.md  app.cpp  app.hpp  applib.cpp  applib.hpp  bracketed_paste.cpp  bracketed_paste.hpp  config.hpp.in  dnslookup.cpp  dnslookup.hpp  hsfilter.cpp  httpd.cpp  httpd.hpp  irc.cpp  irc.hpp  linebuffer.cpp  linebuffer.hpp  lua_uv_dnslookup.cpp  lua_uv_timer.cpp  main.cpp  meson.build  parse_toml.cpp  parse_toml.hpp  process.cpp  process.hpp  safecall.cpp  safecall.hpp  scheme.cpp  scheme.hpp  socat.cpp  socks.cpp  socks.hpp  strings.cpp  strings.hpp  timer.cpp  timer.hpp  userdata.hpp  uv.cpp
client/include/: app.hpp  applib.hpp  bracketed_paste.hpp  dnslookup.hpp  hsfilter.hpp  irc.hpp  linebuffer.hpp  lua_uv_dnslookup.hpp  lua_uv_timer.hpp  luaref.hpp  read-line.hpp  safecall.hpp  socat.hpp  timer.hpp  userdata.hpp  uv.hpp  uvaddrinfo.hpp
client/irc/: irc_connection.cpp  irc_connection.hpp  lua.cpp  lua.hpp  net.cpp  net.hpp  plain_connection.cpp  plain_connection.hpp  socks.cpp  socks.hpp  tls_connection.cpp  tls_connection.hpp
client/net/: connect-impl.hpp  connect.cpp  connect.hpp  connection.cpp  connection.hpp  linebuffer.hpp  stream-impl.hpp  stream.cpp  stream.hpp
dashboard/: .luacheckrc  init.lua
dashboard/components/: Irc.lua  LoadAverage.lua  LoadTracker.lua  Member.lua  Task.lua  User.lua
dashboard/handlers/: cap.lua  commands.lua  input.lua  irc.lua  keyboard.lua  snotice.lua
dashboard/sasl/: anonymous.lua  ecdh.lua  ecdsa.lua  init.lua  plain.lua  scram.lua
dashboard/utils/: cap_negotiation.lua  challenge.lua  configuration_tools.lua  drawing.lua  filter.lua  irc_formatting.lua  irc_registration.lua  matchdsl.lua  numerics.lua  parse_snote.lua  plugin_manager.lua  scrub.lua  send.lua  time.lua
dashboard/view/: bans.lua  channels.lua  console.lua  netcount.lua  plugins.lua  recent_conn.lua  repeats.lua  server_load.lua  stats.lua  status.lua
docs/: CMakeLists.txt  Doxyfile.in
hsfilter/: CMakeLists.txt  hsfilter.cpp  meson.build
hsfilter/include/: hsfilter.hpp
ircc/: .luacheckrc  init.lua  types.lua
ircc/components/: Buffer.lua  Channel.lua  Editor.lua  Irc.lua  Member.lua  NotificationManager.lua  OrderedMap.lua  PluginManager.lua  Task.lua  User.lua
ircc/handlers/: batch.lua  cap.lua  commands.lua  input.lua  irc.lua  keyboard.lua
ircc/notification/: bell.lua  iterm2.lua  mac.lua
ircc/sasl/: anonymous.lua  ecdh.lua  external.lua  init.lua  plain.lua  scram.lua
ircc/test/: scram.lua
ircc/utils/: await.lua  bundle_loader.lua  cap_negotiation.lua  challenge.lua  channel_list.lua  configuration_schema.lua  configuration_tools.lua  drawing.lua  hsfilter.lua  ip_org.lua  irc_formatting.lua  irc_registration.lua  log_server.lua  plugin_manager.lua  pretty_whois.lua  resolve_password.lua  schema.lua  scrub.lua  send.lua  split_statusmsg.lua  time.lua
ircc/view/: help.lua  (+10 more)
ircmsg/: CMakeLists.txt  README.md  ircmsg.c  ircmsg.cpp  meson.build
lua/: .luacheckrc  Editor.lua  LoadAverage.lua  LoadTracker.lua  MaskTracker.lua  NetTracker.lua  OrderedMap.lua  elements.lua  freenode_masks.lua  handlers_irc.lua  handlers_snotice.lua  init-irc.lua  init.lua  ip_org.lua  irc_authentication.lua  irc_challenge.lua  irc_parser.lua  libera_masks.lua  load_average.lua  load_tracker.lua  parse_snote.lua  rotating_window.lua  servers.lua  view_client.lua  view_klines.lua  view_net_trackers.lua  view_recent_conn.lua  view_recent_exit.lua  view_reconnects.lua  view_server_load.lua  view_simple_load.lua
luaclient/: .luacheckrc  init.lua
myarchive/: CMakeLists.txt  myarchive.c
mybase64/: CMakeLists.txt  meson.build  mybase64.c  mybase64.cpp
mybase64/include/: mybase64.h  mybase64.hpp
mygeoip/: CMakeLists.txt  README.md  meson.build  mygeoip.c
myncurses/: CMakeLists.txt  README.md  meson.build  myncurses.c  window.c  window.h
myncurses/include/: myncurses.h
myopenssl/: CMakeLists.txt  bignum.cpp  bignum.hpp  config.ld  digest.cpp  digest.hpp  errors.cpp  errors.hpp  invoke.hpp  meson.build  myopenssl.cpp  pkey.cpp  pkey.hpp  x509.cpp  x509.hpp
myopenssl/include/: myopenssl.hpp  pkey.hpp  x509.hpp
myopenssl/test/: encrsa.pem  rsa.pem  test.lua
mys7/: CMakeLists.txt  s7.c
mysaslprep/: CMakeLists.txt  README.md  mysaslprep.c
mysocks5/: CMakeLists.txt  httpconnect.cpp  socks5.cpp
mystringprep/: CMakeLists.txt  meson.build  mystringprep.c
mystringprep/include/: mystringprep.h
mytoml/: CMakeLists.txt  mytoml.cpp  parse_toml.cpp  parse_toml.hpp  to_toml.cpp  to_toml.hpp
scripts/: tmux-wrap.sh
tests/: CMakeLists.txt  test-scram.lua  test-socks5.cpp  tests-base64.c  tests-base64.cpp  tests-ircmsg.c  tests-ircmsg.cpp
toml++/: CMakeLists.txt
(+82 files in other folders)
